# Appwrite-connector

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  keys.json  test_app.html
src/: config.rs  crypto.rs  db.rs  handlers.rs  main.rs  models.rs  waf.rs
