[package]
name = "appwrite-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
redis = { version = "0.27", features = ["tokio-comp"] }
aes-gcm = "0.10"
base64 = "0.21"
dotenv = "0.15"
rand = "0.8"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
base64ct = "=1.6.0"
home = "=0.5.9"
crc = "=3.0.1"
idna = "=0.5.0"
url = "=2.5.0"
actix-cors = "0.7.1"
chrono = { version = "0.4.42", features = ["serde"] }
actix-files = "0.6.9"
bcrypt = "0.17.1"
reqwest = { version = "0.12.28", features = ["json"] }
lettre = { version = "0.10", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
actix-ws = "0.3.0"
actix-multipart = "0.6"
rust-s3 = "0.34"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3.31"
futures = "0.3.31"
urlencoding = "2.1.3"
zip = "0.6"
lazy_static = "1.4"
rcgen = "0.13"
